Add NET6 Cyotek Image Box to project

--- a/WinformRopeRounding/WinformRopeRounding.csproj
+++ b/WinformRopeRounding/WinformRopeRounding.csproj
@@ -15,6 +15,11 @@
 		<PackageReference Include="Microsoft.ML.ImageAnalytics" Version="1.7.1" />
 		<PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.12.1" />
 		<PackageReference Include="Microsoft.ML.OnnxTransformer" Version="1.7.1" />
+		<PackageReference Include="System.ServiceModel.Duplex" Version="4.10.0" />
+		<PackageReference Include="System.ServiceModel.Federation" Version="4.10.0" />
+		<PackageReference Include="System.ServiceModel.Http" Version="4.10.0" />
+		<PackageReference Include="System.ServiceModel.NetTcp" Version="4.10.0" />
+		<PackageReference Include="System.ServiceModel.Security" Version="4.10.0" />
     </ItemGroup>
 	
   <ItemGroup>
@@ -35,7 +40,10 @@
   <ItemGroup>
     <Folder Include="Assets\Images\" />
     <Folder Include="Models\" />
-    <Folder Include="UserControls\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Cyotek.Windows.Forms.ImageBox\Cyotek.Windows.Forms.ImageBox.csproj" />
   </ItemGroup>
 
   <ItemGroup>
