--- a/WinformRopeRounding/WinformRopeRounding.csproj
+++ b/WinformRopeRounding/WinformRopeRounding.csproj
@@ -6,7 +6,12 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="UserControls\PtzPictureBoxEx.Designer.cs" />
+  </ItemGroup>
 
     <ItemGroup>
 	    <PackageReference Include="Emgu.CV.runtime.windows" Version="4.5.5.4823" />
@@ -15,6 +20,7 @@
 		<PackageReference Include="Microsoft.ML.ImageAnalytics" Version="1.7.1" />
 		<PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.12.1" />
 		<PackageReference Include="Microsoft.ML.OnnxTransformer" Version="1.7.1" />
+		<PackageReference Include="RtspClientSharp" Version="1.3.3" />
 		<PackageReference Include="System.ServiceModel.Duplex" Version="4.10.0" />
 		<PackageReference Include="System.ServiceModel.Federation" Version="4.10.0" />
 		<PackageReference Include="System.ServiceModel.Http" Version="4.10.0" />
@@ -39,7 +45,7 @@
 
   <ItemGroup>
     <Folder Include="Assets\Images\" />
-    <Folder Include="Models\" />
+    <Folder Include="RtspPlayer\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -51,5 +57,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="xcopy /y /d  &quot;$(ProjectDir)RtspPlayer\x64\*.dll&quot; &quot;$(ProjectDir)$(OutDir)&quot;" />
+  </Target>
 
 </Project>
