--- a/WinformRopeRounding/WinformRopeRounding.csproj
+++ b/WinformRopeRounding/WinformRopeRounding.csproj
@@ -26,7 +26,8 @@
 		<PackageReference Include="Microsoft.ML.ImageAnalytics" Version="1.7.1" />
 		<PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.12.1" />
 		<PackageReference Include="Microsoft.ML.OnnxTransformer" Version="1.7.1" />
-		<PackageReference Include="RtspClientSharp" Version="1.3.3" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+		<PackageReference Include="Serilog.Sinks.WinForms.Core" Version="1.0.2" />
 		<PackageReference Include="System.ServiceModel.Duplex" Version="4.10.0" />
 		<PackageReference Include="System.ServiceModel.Federation" Version="4.10.0" />
 		<PackageReference Include="System.ServiceModel.Http" Version="4.10.0" />
@@ -51,6 +52,7 @@
 
   <ItemGroup>
     <Folder Include="Assets\Images\" />
+    <Folder Include="Classes\" />
   </ItemGroup>
 
   <ItemGroup>
